--- a/translate-button.html
+++ b/translate-button.html
@@ -1,5 +1,5 @@
 <a tabindex="_tbidx_">
 	<div class="tool translate desktop mobile" style="padding-left: 10px;padding-right: 10px;">
-		<span class="fa fa-globe"></span> <span>Leia em Português</span>
+		<span class="fa fa-globe"></span> <span class="translate-button">Leia em Português</span><span class="translate-button" style="display:none;">Read in English</span>
 	</div>
 </a>
