adding crazy headlines

--- a/translate-button.html
+++ b/translate-button.html
@@ -1,5 +1,5 @@
 <a tabindex="_tbidx_">
-	<div class="tool translate desktop mobile" style="padding-left: 10px;padding-right: 10px;">
+	<div class="tool translate first desktop mobile" style="padding-left: 10px;padding-right: 10px;">
 		<span class="flag-icon flag-icon-br"></span><span class="flag-icon flag-icon-us" style="display:none;"></span> <span class="translate-button">Leia em Português</span><span class="translate-button" style="display:none;">Read in English</span>
 	</div>
 </a>
