adding translate.css

--- a/utility-tools-replace.html
+++ b/utility-tools-replace.html
@@ -1,6 +1,6 @@
 <div class="utility-tools">
 	<a tabindex="_tbidx_">
-		<div class="tool translate first desktop mobile" style="padding-left: 10px;padding-right: 10px;">
+		<div class="tool translate nav first desktop mobile">
 			<span class="flag-icon flag-icon-br"></span><span class="flag-icon flag-icon-us" style="display:none;"></span> <span class="translate-button">Leia em Português</span><span class="translate-button" style="display:none;">Read in English</span>
 		</div>
 	</a>
@@ -32,4 +32,23 @@
 			<span class="fa fa-list-ul"></span>
 		</div>
 	</a>
+</div>
+<div id="translate-dropdown-menu">
+	<ul>
+		<li>
+			<a href="https://subscribe.washingtonpost.com/profile/#/?destination=https://www.washingtonpost.com/&amp;refresh=true">
+				Profile
+			</a>
+		</li>
+		<li>
+			<a href="https://www.washingtonpost.com/pb/readinglist/">
+				Reading List
+			</a>
+		</li>
+		<li>
+			<a href="https://subscribe.washingtonpost.com/loginregistration/index.html#/logout">
+				Log out
+			</a>
+		</li>
+	</ul>
 </div>
