--- a/mobile-utility.html
+++ b/mobile-utility.html
@@ -1,9 +1,10 @@
 <div class="utility-tools"> 
-<div class="textresizer tool first mobile" style="
-"><span class="flag-icon flag-icon-us" style="
-    font-size: .9em;
-"></span><span class="fa fa-caret-down" style="
+<div class="textresizer tool first mobile" style="padding-left: 10px;padding-right: 10px;"><span class="fa fa-language" style="font-size:.9em;color:#2e6d9d;"></span>
+  <span class="flag-icon flag-icon-br" style="font-size: .8em;position: absolute;left: 21px;"></span>
+  <span class="flag-icon flag-icon-ve" style="font-size: .8em;left: 21px;position: absolute;"></span>
+  <span style="padding-left:5px;">Translate</span>
+<span class="fa fa-caret-down" style="
     font-size: .65em;
     color: #666;
-    margin-left: 5px;
+    /* margin-left: 5px; */
 "></span></div><div class="textresizer tool mobile"><span class="hideText" tabindex="_tbidx_">Resize Text</span><span class="fa fa-font"></span></div><a onclick="window.print();" tabindex="_tbidx_"> <div class="print tool mobile"><span class="hideText">Print Article</span><span class="fa fa-print"></span></div> </a><a href="#" onclick="wp_pb.report('comments', 'showComments',{elm:$(this),guid:'https://www.washingtonpost.com/world/the_americas/zika-prompts-urgent-debate-about-abortion-in-latin-america/2016/02/07/b4f3a718-cc6b-11e5-b9ab-26591104bb19_story.html'}); return false;" tabindex="_tbidx_"> <div class="comments tool last mobile"><span class="hideText">Comments</span><span class="fa fa-comments"></span> <span id="echo_container" class="echo_container comment-vars echo-counter text" guid="https://www.washingtonpost.com/world/the_americas/zika-prompts-urgent-debate-about-abortion-in-latin-america/2016/02/07/b4f3a718-cc6b-11e5-b9ab-26591104bb19_story.html">21</span></div> </a><a tabindex="_tbidx_"> <div class="tool read-later-bookmark desktop mobile" data-canonical-url="https://www.washingtonpost.com/world/the_americas/zika-prompts-urgent-debate-about-abortion-in-latin-america/2016/02/07/b4f3a718-cc6b-11e5-b9ab-26591104bb19_story.html"> <span class="hideText">Book mark article</span> <span class="fa fa-bookmark-o"></span> </div> </a> <a tabindex="_tbidx_"> <div class="tool read-later-list desktop mobile"> <span class="hideText">Read later list</span> <span class="fa fa-list-ul"></span> </div> </a> </div>
