--- a/mobile-utility.html
+++ b/mobile-utility.html
@@ -1,10 +1,47 @@
 <div class="utility-tools"> 
-<div class="textresizer tool first mobile" style="padding-left: 10px;padding-right: 10px;"><span class="fa fa-language" style="font-size:.9em;color:#2e6d9d;"></span>
-  <span class="flag-icon flag-icon-br" style="font-size: .8em;position: absolute;left: 21px;"></span>
-  <span class="flag-icon flag-icon-ve" style="font-size: .8em;left: 21px;position: absolute;"></span>
+<div class="textresizer tool first mobile" style="padding-left: 10px;padding-right: 10px;"><span class="fa fa-language lang" style="font-size:.9em;color:#2e6d9d;"></span>
+  <span class="flag-icon flag-icon-br br" style="font-size: .8em;position: absolute;left: 21px;"></span>
+  <span class="flag-icon flag-icon-ve ve" style="font-size: .8em;left: 21px;position: absolute;"></span>
   <span style="padding-left:5px;">Translate</span>
 <span class="fa fa-caret-down" style="
     font-size: .65em;
     color: #666;
     /* margin-left: 5px; */
 "></span></div><div class="textresizer tool mobile"><span class="hideText" tabindex="_tbidx_">Resize Text</span><span class="fa fa-font"></span></div><a onclick="window.print();" tabindex="_tbidx_"> <div class="print tool mobile"><span class="hideText">Print Article</span><span class="fa fa-print"></span></div> </a><a href="#" onclick="wp_pb.report('comments', 'showComments',{elm:$(this),guid:'https://www.washingtonpost.com/world/the_americas/zika-prompts-urgent-debate-about-abortion-in-latin-america/2016/02/07/b4f3a718-cc6b-11e5-b9ab-26591104bb19_story.html'}); return false;" tabindex="_tbidx_"> <div class="comments tool last mobile"><span class="hideText">Comments</span><span class="fa fa-comments"></span> <span id="echo_container" class="echo_container comment-vars echo-counter text" guid="https://www.washingtonpost.com/world/the_americas/zika-prompts-urgent-debate-about-abortion-in-latin-america/2016/02/07/b4f3a718-cc6b-11e5-b9ab-26591104bb19_story.html">21</span></div> </a><a tabindex="_tbidx_"> <div class="tool read-later-bookmark desktop mobile" data-canonical-url="https://www.washingtonpost.com/world/the_americas/zika-prompts-urgent-debate-about-abortion-in-latin-america/2016/02/07/b4f3a718-cc6b-11e5-b9ab-26591104bb19_story.html"> <span class="hideText">Book mark article</span> <span class="fa fa-bookmark-o"></span> </div> </a> <a tabindex="_tbidx_"> <div class="tool read-later-list desktop mobile"> <span class="hideText">Read later list</span> <span class="fa fa-list-ul"></span> </div> </a> </div>
+<div id="user-menu" class="nav-menu translate-options nav-user-show" style="
+    display:none;
+    border: 1px solid #dedede;
+    margin-top: 4px;
+    /* width: 165px; */
+    position: absolute;
+    z-index: 10;
+    background: white;
+    margin-left: 10px;
+    /* left: 20px; */
+    box-shadow: 0 0 16px 0 rgba(42,42,42,0.2);
+"> <div class="mobile-arrow logged-in"></div> <div class="clear"></div> <ul style="
+    list-style-type: none;
+    padding-left: 0px;
+    margin-top: 0px;
+    width: auto;
+    padding-right: 0px;
+    margin-bottom: 0px;
+    /* padding-bottom: 5px; */
+    /* padding-top: 5px; */
+    padding-bottom: 0px;
+"><li style="
+    padding-top: 10px;
+    padding-left: 15px;
+    padding-bottom: 10px;
+    padding-right: 15px;
+    /* background: #f5f5f5; */
+">
+  <span class="flag-icon flag-icon-br"></span> Leia em Português
+</li><li style="
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+">
+  <span class="flag-icon flag-icon-ve"></span> Leer en español
+</li></ul> </div>
