--- a/mobile-utility.html
+++ b/mobile-utility.html
@@ -1,8 +1,8 @@
 <div class="utility-tools"> 
-<div class="textresizer tool first mobile" style="padding-left: 10px;padding-right: 10px;"><span class="fa fa-language lang" style="font-size:.9em;color:#2e6d9d;"></span>
+<div class="translate tool first mobile" style="padding-left: 10px;padding-right: 10px;"><span class="fa fa-language lang" style="font-size:.9em;color:#2e6d9d;"></span>
   <span class="flag-icon flag-icon-br br" style="font-size: .8em;position: absolute;left: 21px;"></span>
   <span class="flag-icon flag-icon-ve ve" style="font-size: .8em;left: 21px;position: absolute;"></span>
-  <span style="padding-left:5px;">Translate</span>
+  <span style="padding-left:5px;">Languages</span>
 <span class="fa fa-caret-down" style="
     font-size: .65em;
     color: #666;
