--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
 <!doctype html>
+<head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+</head>
+<body>
+	<h1>Translation mock</h1>
+	<h5><a href="blake.hunsicker@washpost.com">Blake Hunsicker</a></h5>
+
+	<h4>Icon animation</h4>
+	<p>See: light css animation rotates icons</p>
+	<img style="width:300px;" src="mobile.gif" />
+
+	<h4>Desktop</h4>
+
+	<h4>Mobile</h4>
+
+
+</body>
